2012-12-20  Elliott Sprehn  <esprehn@gmail.com>

        Block level pseudo elements bleed background color to <html>
        https://bugs.webkit.org/show_bug.cgi?id=104855

        Reviewed by Julien Chaffraix.

        Before r137336 placing a pseudo element :before or :after that was display
        block on the <html> element would also set the background color of the
        root of the document.

        This was because RenderObject::isRoot checked if document()->documentElement() == m_node,
        which was true for html:before or html:after with the old implementation
        of generated content. Instead it should have compared against node() which
        would have compensated for the anonymous generated content.

        This is fixed by the new generated content implementation that was turned
        on in r137336 because m_node is now the PseudoElement, not the generatingNode.

        * fast/css-generated-content/html-pseudo-background-color-expected.html: Added.
        * fast/css-generated-content/html-pseudo-background-color.html: Added.

2012-12-20  Dominic Mazzoni  <dmazzoni@google.com>

        Unreviewed. Adjust Mac TestExpectations.
        https://bugs.webkit.org/show_bug.cgi?id=105372

        Removes accessibility/svg-bounds.html from
        platform/mac/TestExpectations.

        The problem was caused by bug 97359: committed r138061,
        reverted r138121, re-landed r138260 without the bug.

        * platform/mac/TestExpectations: remove accessibility/svg-bounds.html

2012-12-20  Antoine Quint  <graouts@apple.com>

        onload callback for <track> element attached to <video> does not fire
        https://bugs.webkit.org/show_bug.cgi?id=103258

        Reviewed by Eric Carlson.

        As a result of fixing this bug, a few new failures were uncovered and TestExpectations
        needed to be updated to take this into account. Additionally, some existing tests were