@@ -1,0 +1,51 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Resource Timing cached resources</title>
+<link rel="author" title="Google" href="http://www.google.com/" />
+<link rel="help" href="http://www.w3.org/TR/resource-timing/#dom-performanceresourcetiming-initiatortype"/>
+<script src="/w3c/resources/testharness.js"></script>
+<script src="/w3c/resources/testharnessreport.js"></script>
+<script src="/w3c/webperf/resources/webperftestharness.js"></script>
+<script>
+setup({explicit_done: true});
+var d;
+var iframe;
+var iframeBody;
+var image;
+function setup_iframe() {
+    iframe = document.getElementById('frameContext');
+    d = iframe.contentWindow.document;
+    iframeBody = d.createElement('body');
+
+    image = d.createElement('img');
+    image.src = '/w3c/webperf/resources/generate_resource.php?type=image&id=cached';
+    iframeBody.appendChild(image);
+}
+function reload_image() {
+    iframeBody.removeChild(image);
+    image = d.createElement('img');
+    image.src = '/w3c/webperf/resources/generate_resource.php?type=image&id=cached';
+    image.addEventListener('load', onload_test, false);
+    iframeBody.appendChild(image);
+}
+function onload_test() {
+    var entries = iframe.contentWindow.performance.webkitGetEntries();
+    test_equals(entries.length, 2, "There should be two entries");
+    if (entries.length >= 2) {
+        test_equals(entries[0].name, entries[1].name, "Both entries should have the same name");
+    }
+    done();
+}
+window.setup_iframe = setup_iframe;
+window.addEventListener("load", reload_image, false);
+</script>
+</head>
+<body>
+<h1>Description</h1>
+<p>This test validates that a 304 Not Modified resource appears in the buffer.</p>
+<div id="log"></div>
+<iframe id="frameContext" src="/w3c/webperf/resources/inject_resource_test.html"></iframe>
+</body>
+</html>
