@@ -1,3 +1,15 @@
+2012-12-20  James Simonsen  <simonjam@chromium.org>
+
+        [Resource Timing] 304 responses should show up in the timing buffer
+        https://bugs.webkit.org/show_bug.cgi?id=105490
+
+        Reviewed by Tony Gentilcore.
+
+        Test: http/tests/w3c/webperf/submission/resource-timing/html/test_resource_cached.html
+
+        * loader/cache/CachedResourceLoader.cpp:
+        (WebCore::CachedResourceLoader::loadDone):
+
 2012-12-19  Simon Fraser  <simon.fraser@apple.com>
 
         Lots of sticky tests failing in WK2
