@@ -1,3 +1,14 @@
+2012-12-20  James Simonsen  <simonjam@chromium.org>
+
+        [Resource Timing] 304 responses should show up in the timing buffer
+        https://bugs.webkit.org/show_bug.cgi?id=105490
+
+        Reviewed by Tony Gentilcore.
+
+        * http/tests/w3c/webperf/resources/generate_resource.php:
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_cached-expected.txt: Added.
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_cached.html: Added.
+
 2012-12-20  Elliott Sprehn  <esprehn@gmail.com>
 
         Block level pseudo elements bleed background color to <html>
